Rename external volume for clarity

--- a/database/flooddev/u_flood/setup/docker/docker-compose-restore.yml
+++ b/database/flooddev/u_flood/setup/docker/docker-compose-restore.yml
@@ -3,9 +3,8 @@ version: "3.6"
 services:
   flood-db:
     volumes:
-      - backup:/backup
+      - flood-db-backup:/backup
 
 volumes: 
-  backup:
+  flood-db-backup:
     external: true
-    name: backup
