Increase shared memory size
With the default value (64M) there were errors when doing the liquibase
update 4.4.0. The rebuilding of the materialized views is presumably
memory intensive.

--- a/database/flooddev/u_flood/setup/docker/docker-compose.yml
+++ b/database/flooddev/u_flood/setup/docker/docker-compose.yml
@@ -6,6 +6,7 @@ services:
     build:
       context: ..
       dockerfile: docker/Dockerfile
+    shm_size: 1g
     environment:
       PGDATA: /pgdata
       POSTGRES_PASSWORD: postgres
