Bind mount the backup file not the directory

--- a/database/flooddev/u_flood/setup/docker/docker-compose-restore.yml
+++ b/database/flooddev/u_flood/setup/docker/docker-compose-restore.yml
@@ -3,4 +3,4 @@ version: "3.6"
 services:
   flood-db:
     volumes:
-      - ./db-backups:/backup
+      - ./db-backups/flood-db.bak:/backup/flood-db.bak
