Revert to using volumes for the backup file
* Revert to using volumes and use `docker compose cp` to copy the backup
  file onto the volume
* Create script for running the tests
* Update instructions in readme

--- a/database/flooddev/u_flood/setup/docker/docker-compose-restore.yml
+++ b/database/flooddev/u_flood/setup/docker/docker-compose-restore.yml
@@ -3,4 +3,7 @@ version: "3.6"
 services:
   flood-db:
     volumes:
-      - ./db-backups/flood-db.bak:/backup/flood-db.bak
+      - flood-db-backup:/backup
+
+volumes:
+  flood-db-backup:
