Add function to refresh telemetry data timestamps
This makes the data appear current by 'pulling' it forward in time
so the readings are moved forward by the diff between now and the last
telemetry timestamp. It should be called on demand.

Also, made the network name specific and named the volumes for ease of
management.

--- a/database/flooddev/u_flood/setup/docker/Dockerfile
+++ b/database/flooddev/u_flood/setup/docker/Dockerfile
@@ -5,6 +5,7 @@ WORKDIR /db-init-scripts
 COPY docker/tablespaces.sql .
 COPY docker/roles.sql .
 COPY docker/database.sql .
+COPY docker/refresh-telemetry-function.sql .
 COPY ./non_rds_initial_setup.sql .
 RUN mkdir -p /wiyby/wiyby_tables /wiyby/wiyby_indexes
 RUN chown -R postgres:root /wiyby
