--- a/database/flooddev/u_flood/setup/docker/docker-compose.yml
+++ b/database/flooddev/u_flood/setup/docker/docker-compose.yml
@@ -6,6 +6,7 @@ services:
     build:
       context: ..
       dockerfile: docker/Dockerfile
+    image: flood-db
     shm_size: 1g
     environment:
       PGDATA: /pgdata
@@ -14,6 +15,8 @@ services:
     volumes:
       - pgdata:/pgdata
       - wiyby:/wiyby
+    networks:
+      cff-internal:
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U postgres"]
       interval: 10s
@@ -23,4 +26,9 @@ services:
 
 volumes: 
   pgdata:
+    name: flood-db-pgdata
   wiyby:
+    name: flood-db-wiyby
+
+networks:
+  cff-internal:
